Mon Jan 21 18:28:17 2002  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_adjustment_changed): Update
	top_row.  Remove extraneous print statements.

2002-01-21  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtkitemfactory.c (gtk_item_factory_popup, 
	gtk_item_factory_popup_with_data): Document allowed values
	for ifactory.

	* gtk/gtkitemfactory.c (gtk_item_factory_delete_entry): Make 
	it work for paths with underline accelerators.

Fri Jan 18 16:31:21 2002  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_size_allocate): only resize the
	window.

Mon Jan 21 11:56:31 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_real_activate): Trap the 
	case where there is no default widget and the entry
	is the focus widget, since this also causes infinite
	recursion. (#69158)

Mon Jan 21 11:46:39 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.c (gdk_init_check): Set the fallback program class here,
	rather than lazilygdk_get_program_class(), since we don't want
	-name to override it. (#69123, Ryan Lovett)

Mon Jan 21 10:29:45 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.c: Fix wrong types for command line arguments 
	(#69124, Ryan Lovett)

	* gdk/gdk.c (gdk_arg_context_parse): Fix bug in parsing
	parsing '--arg VALUE'.

	* gdk/gdk.c: Remove unused variable gdk_error_trap_free_list.

2002-01-21  Havoc Pennington  <hp@pobox.com>

	* gdk/gdkwindow.c (gdk_window_add_filter): mention that window 
	arg can be NULL

Sat Jan 19 20:49:41 2002  Kristian Rietveld  <kris@gtk.org>

	* demos/gtk-demo/editable_cells.c: fix a load of open line ends
	(cell_edited): modified patch from German Poo Caaman~o
	to fix up old_text declaration and free the memory
	(do_editable_cells): unref the model after creating the treeview

	* demos/gtk-demo/list_store.c: fix a load of open line ends,
	(add_columns): set the sort column id, so we can sort

	* demos/gtk-demo/tree_store.c: fix a load of open line ends,